--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,66 @@
     <link rel="stylesheet" href="style.css">
     <title>Dragon Fruit!</title>
 </head>
-<body>
-    <div class="slide">
-        <span class="title">Fruit of the month</span>
-        <p class="subtitle">Dragon fruit</p>
 
+<body>
+    <section id="fruit-img">
+        <img src="img/slide-mobile.jpg" class="iphone" alt="">
+    </section>
+    <div id="participate">
+        <div class="flex-container">
+            <h1>Get your box</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                ea commodo consequat.</p>
+            <img class="img-box" src="img/box.jpg" alt="">
+            <input class="form-ipt" type="text" name="firstname" placeholder="Name"><br>
+            <input class="form-ipt" type="email" name="email" placeholder="Email"><br>
+            <input class="form-ipt" type="number" name="postal_code" placeholder="CP"><br>
+            <button class="btn-ipt" >Send</button>
+        </div>
     </div>
-    <!-- <div class=""></div> -->
+    <section id="benefits">
+        <h2>benefits</h2>
+        <img class="img-benefits" src="img/benefits.png" alt="">
+        <!-- <div>
+            <h2>Why pitahaya</h2>
+            <p>7g Lorem ipsum</p>
+            <p>7g Lorem ipsum</p>
+            <img src="" alt="">
+            <p>7g Lorem ipsum</p>
+            <p>7g Lorem ipsum</p>
+        </div>
+        <div class="card">
+            <img class="card-image" src="" alt="">
+            <h3 class="card-title">Get your dragon fruit box</h3>
+            <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+        </div>
+        <div class="card">
+            <img class="card-image" src="" alt="">
+            <h3 class="card-title">Get your dragon fruit box</h3>
+            <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h3>Get your dragon fruit box</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+        </div> -->
+    </section>
+    <section id="benefits">
+            <img class="img-benefits" src="img/benefits-items.jpg" alt="">
+    </section>
+    <footer>
+        <span>Follow us</span><br>
+        <span>www.exoticfruits.com</span>
+    </footer>
 </body>
+
 </html>
